Newsletter: Classic style adjustments

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -34,7 +34,8 @@
 {% set boxBackground = ''%}
 {# Additional Padding used for box styles #}
 {% set addtlPad = '' %}
-{% set classicStyle = '' %}
+{% set classicStyle = "margin-bottom: 20px; width:95%" %}
+{% set classicTableOffset = 'border-collapse: collapse; border-spacing: 0; padding: 0;' %}
 
 {# CU LOGO #}
 {% set cuLogoDark = base_url ~ '/' ~  base_path ~ directory ~ '/images/cu-boulder-logo-text-black.gif' %}
@@ -48,10 +49,11 @@
 {% set aStyles = 'color: #ff9900;' %}
 {% set pStyles = 'color:black;' %}
 {% set headerStyles = 'width:100%;background-color: black; padding-bottom:50px;' %}
+{% set classicTableOffset = 'margin-top: -50px;padding:10px;' %}
 {# padding: 15px 25px; #}
 {% set footerStyles = 'background-color: black; padding-top:20px' %}
 {% set cuLogoSrc = cuLogoLight %}
-{% set classicImgOffset = 'padding: 10px; background: white; margin-top: -50px;'%}
+{% set classicImgOffset = 'width:100%'%}
 {% set emailBackground = 'background-color:black;' %}
 {# Minimal #}
 {% elseif designType == 'minimal' %}
@@ -279,7 +281,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                             <tbody>
                                 {# CU LOGO #}
                                 <tr>
-                                    <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 10px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
+                                    <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 25px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
                                         <a href="http://www.colorado.edu">
                                             {# TO DO -- need to swap between this and the white one depending on the color #}
                                             <img style="max-width:35%" src="{{cuLogoSrc}}">
@@ -288,7 +290,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                                 </tr>
                                 {# Newsletter Taxonomy Image -- might need to be a separate table #}
                                 <tr>
-                                    <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 10px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
+                                    <td style="-moz-hyphens: none; -webkit-hyphens: none; border-collapse: collapse !important; hyphens: none; word-break: break-word; padding: 25px; text-align: left; vertical-align: top; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px;">
                                         {% if node.field_newsletter_type.entity.field_newsletter_name_image.entity.uri.value %}
                                         <img style="object-fit:cover;-ms-interpolation-mode: bicubic; clear: both; display: block; float: left; height: 167px !important; max-width: 100% !important; outline: none; text-decoration: none; width: 250px !important; max-height: auto !important;"src="{{base_url}}{{ file_url(node.field_newsletter_type.entity.field_newsletter_name_image.entity.uri.value) }}">
                                         {% endif %}
@@ -296,14 +298,14 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                                 </tr>
                                 {# Newsletter title #}
                                 <tr>
-                                    <td style="padding-left:10px; text-align:left">
+                                    <td style="padding-left:25px; text-align:left">
                                         <span>{{node.field_newsletter_type.entity.label}}</span>
                                     </td>
                                 </tr>
                                 {# Date & View on Website Link #}
                                 <tr>
-                                    <td style="padding-left:10px; text-align:left">{{ node.changed.value|date("M. j, Y") }}</td>
-                                    <td style="padding-right:10px;text-align:right;">
+                                    <td style="padding-left:25px; text-align:left">{{ node.changed.value|date("M. j, Y") }}</td>
+                                    <td style="padding-right:25px;text-align:right;">
                                         <a style="text-wrap:nowrap" href="{{base_url}}{{ path('entity.node.canonical', {'node': node.id}) }}">View on website</a>
                                     </td>
                                 </tr>
@@ -318,12 +320,12 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                 <tbody>
                     <td>
                         <td>
-                            <table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; padding-bottom:20px;font-weight: normal; margin: 0; font-size: 14px; background-color: white;">
+                            <table role="presentation" border="0" width="100%" cellspacing="0" style="text-align: left; vertical-align: top; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; padding-bottom:20px;font-weight: normal; margin: 0; font-size: 14px; background-color: white;{{classicTableOffset}}">
                                 <tr>
-                                  <td align="center" style="padding-right:10px; padding-left:10px">
+                                  <td align="center">
                                 <!-- Intro Img -->
                                     {% if content.field_newsletter_intro_image|render %}
-                                    <img id="newsletter-email-intro-img" src="{{base_url}}{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}" style="{{classicImgOffset}};margin-bottom: 20px;" width="95%">
+                                    <img id="newsletter-email-intro-img" src="{{base_url}}{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}" style="{{classicImgOffset}}">
                                     {% endif %}
                                     </td>
                                 </tr>
@@ -331,7 +333,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                                     <td>
                                     <!-- Intro Text-->
                                     {% if content.field_newsletter_intro_body|render %}
-                                    <div style="padding:10px;"id="newsletter-intro-body">{{ content.field_newsletter_intro_body }}</div>
+                                    <div id="newsletter-intro-body">{{ content.field_newsletter_intro_body }}</div>
                                     {% endif %}
                                     </td>
                                 </tr>
