--- a/templates/block/block--image-gallery.html.twig
+++ b/templates/block/block--image-gallery.html.twig
@@ -12,7 +12,7 @@
 
 {%
   set classes = [
-	'container',
+    'container',
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
@@ -23,12 +23,12 @@
 
 {# Block/Title/Icon Styles #}
 {% set blockStyles = [
-	content.field_bs_background_style|render|striptags|trim,
-	content.field_bs_content_font_scale|render|striptags|trim,
-	content.field_bs_icon_position|render|striptags|trim,
-	content.field_bs_heading_alignment|render|striptags|trim,
-	content.field_bs_title_font_scale|render|striptags|trim,
-	''
+    content.field_bs_background_style|render|striptags|trim,
+    content.field_bs_content_font_scale|render|striptags|trim,
+    content.field_bs_icon_position|render|striptags|trim,
+    content.field_bs_heading_alignment|render|striptags|trim,
+    content.field_bs_title_font_scale|render|striptags|trim,
+    ''
 ] %}
 
 {% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
@@ -36,37 +36,58 @@
 {% set headingTag = content.field_bs_heading|render|striptags|trim %}
 {% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
 
+{% set totalColumns = "6" %}
+{% set tabletColumns = "3" %}
+{% set masonryStyle = content.field_masonry_display[0]|render|striptags|trim %}
+
+{% if masonryStyle == "True" %}
+    {% set totalColumns = content.field_masonry_columns[0]|render %}
+    {% if totalColumns == 2 %}
+        {% set tabletColumns = 2 %}
+    {% endif %}
+{% endif %}
+
 {% block content %}
-	<div{{attributes.addClass(classes,blockStyles)}}>
-		{{ title_prefix }}
-		{% if label %}
-			<div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text {{ headingStyle }}">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-		{% endif %}
-		{{ title_suffix }}
-		<div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 g-4 gallery-div">
-			{% for key, item in content['#block_content'].field_image_gallery_photo  %}
-				{% if key|first != '#' %}
-					{% if item.entity.field_media_image_caption.value|render|striptags|trim %}
-						{% set photoDescription = item.entity.field_media_image_caption.value|render|striptags|trim %}
-					{% else %}
-						{% set photoDescription = "" %}
-					{% endif %}
-					<div class="col gallery-item">
-						<a href="{{ file_url(item.entity.field_media_image.entity.fileuri) }}" class="glightbox ucb-gallery-lightbox" data-gallery="gallery{{ content['#block_content'].id() }}" data-glightbox="description: {{ photoDescription }} ">
-							{{ item|view }}
-						</a>
-					</div>
-				{% endif %}
-			{% endfor %}
-		</div>
-	</div>
+    <div{{attributes.addClass(classes,blockStyles)}}>
+        {{ title_prefix }}
+        {% if label %}
+            <div class="block-title {{ headingStyle }}">
+                <{{headingTag}}{{title_attributes}}>
+                    <span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+                        {{ content.field_bs_icon }}
+                    </span>
+                    <span class="block-title-text">
+                        {{ label }}
+                    </span>
+                </{{headingTag}}>
+            </div>
+        {% endif %}
+        {{ title_suffix }}
+        <div class="row row-cols-lg-{{totalColumns}} row-cols-md-{{tabletColumns}} row-cols-2 g-4 gallery-div masonry-option-true" data-masonry='{"percentPosition": true }'>
+            {% for key, item in content['#block_content'].field_image_gallery_photo  %}
+                {% if key|first != '#' %}
+                    {% if item.entity.field_media_image_caption.value|render|striptags|trim %}
+                        {% set photoDescription = item.entity.field_media_image_caption.value|render|striptags|trim %}
+                    {% else %}
+                        {% set photoDescription = "" %}
+                    {% endif %}
+                    {% if masonryStyle == "True" %}
+                        <div class="col gallery-item">
+                            <a href="{{ file_url(item.entity.field_media_image.entity.fileuri) }}" class="glightbox ucb-gallery-lightbox" data-gallery="gallery{{ content['#block_content'].id() }}" data-glightbox="description: {{ photoDescription }} ">
+                                <div class ="imageMediaStyle large_image_style">
+                                    <img src = "{{ file_url(item.entity.field_media_image.entity.fileuri) }}" alt = "{{item.entity.field_media_image.alt|render}}" width="1500" height = "2250">
+                                </div>
+                            </a>
+                        </div>
+                    {% else %}
+                        <div class="col gallery-item">
+                            <a href="{{ file_url(item.entity.field_media_image.entity.fileuri) }}" class="glightbox ucb-gallery-lightbox" data-gallery="gallery{{ content['#block_content'].id() }}" data-glightbox="description: {{ photoDescription }} ">
+                                {{ item|view }}
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
 {% endblock content %}
