Add styling for webform urls

--- a/css/style.css
+++ b/css/style.css
@@ -976,6 +976,7 @@ fieldset:not(.fieldgroup) legend {
 }
 
 input.form-text,
+input.form-url,
 textarea.form-textarea,
 input[type="text"],
 input[type="email"],
@@ -1113,4 +1114,23 @@ button.tabledrag-toggle-weight {
 a.tabledrag-handle .handle {
   box-sizing: content-box;
   margin: -0.25em 0.5em;
+}
+
+/* Column List CSS */
+@media only screen and (min-width: 576px) {
+.column-list.column-list-2 .ul {
+  -webkit-columns: 2;
+  -moz-columns: 2;
+  columns: 2;
+}
+.column-list.column-list-3 .ul {
+  -webkit-columns: 3;
+  -moz-columns: 3;
+  columns: 3;
+}
+.column-list.column-list-4 .ul {
+  -webkit-columns: 4;
+  -moz-columns: 4;
+  columns: 4;
+}
 }
