column list css

--- a/css/style.css
+++ b/css/style.css
@@ -1115,3 +1115,22 @@ a.tabledrag-handle .handle {
   box-sizing: content-box;
   margin: -0.25em 0.5em;
 }
+
+/* Column List CSS */
+@media only screen and (min-width: 576px) {
+  .column-list.column-list-2 .ul {
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    columns: 2;
+  }
+  .column-list.column-list-3 .ul {
+    -webkit-columns: 3;
+    -moz-columns: 3;
+    columns: 3;
+  }
+  .column-list.column-list-4 .ul {
+    -webkit-columns: 4;
+    -moz-columns: 4;
+    columns: 4;
+  }
+}
