--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -33,32 +33,35 @@
     <div class="container ucb-person">
         <div class="row ucb-person-personal">
             <div class="col col-sm-12 col-md-6 col-lg-4 ucb-person-main">
-                {{ content.field_ucb_person_photo }}
-
-                {% if content.field_ucb_person_email.0 or content.field_ucb_person_phone.0 or content.field_ucb_person_primary_link.0 %}
-                    <div class="ucb-person-section ucb-person-contact">
-                        {{ content.field_ucb_person_email }}
-                        {{ content.field_ucb_person_phone }}
-                        {{ content.field_ucb_person_primary_link }}
-                    </div>
-                {% endif %}
-                {% if content.field_ucb_person_links.0 %}
-                    <div class="ucb-person-section ucb-person-links">
-                        {{ content.field_ucb_person_links }}
-                    </div>
-                {% endif %}
-                {% if content.field_ucb_person_address.0 %}
-                    <div class="ucb-person-section" aria-labelledby="headerAddress">
-                        <span class="ucb-person-section-header" id="headerAddress">Address</span>
-                        {{ content.field_ucb_person_address }}
-                    </div>
-                {% endif %}
-                {% if content.field_ucb_person_office_hours.0 %}
-                    <div class="ucb-person-section ucb-person-office-hours" aria-labelledby="headerOfficeHours">
-                        <span class="ucb-person-section-header" id="headerOfficeHours">Office Hours</span>
-                        {{ content.field_ucb_person_office_hours }}
-                    </div>
-                {% endif %}
+                <div class="col col-sm-6 col-md-12">
+                    {{ content.field_ucb_person_photo }}
+                </div>
+                <div class="col col-sm-6 col-md-12">
+                    {% if content.field_ucb_person_email.0 or content.field_ucb_person_phone.0 or content.field_ucb_person_primary_link.0 %}
+                        <div class="ucb-person-section ucb-person-contact">
+                            {{ content.field_ucb_person_email }}
+                            {{ content.field_ucb_person_phone }}
+                            {{ content.field_ucb_person_primary_link }}
+                        </div>
+                    {% endif %}
+                    {% if content.field_ucb_person_links.0 %}
+                        <div class="ucb-person-section ucb-person-links">
+                            {{ content.field_ucb_person_links }}
+                        </div>
+                    {% endif %}
+                    {% if content.field_ucb_person_address.0 %}
+                        <div class="ucb-person-section" aria-labelledby="headerAddress">
+                            <span class="ucb-person-section-header" id="headerAddress">Address</span>
+                            {{ content.field_ucb_person_address }}
+                        </div>
+                    {% endif %}
+                    {% if content.field_ucb_person_office_hours.0 %}
+                        <div class="ucb-person-section ucb-person-office-hours" aria-labelledby="headerOfficeHours">
+                            <span class="ucb-person-section-header" id="headerOfficeHours">Office Hours</span>
+                            {{ content.field_ucb_person_office_hours }}
+                        </div>
+                    {% endif %}
+                </div>
             </div>
             <div class="col col-sm-12 col-md-6 col-lg-8">
                 {% if content.body.0 %}
