--- a/templates/field/field--field-ucb-person-department.html.twig
+++ b/templates/field/field--field-ucb-person-department.html.twig
@@ -5,10 +5,10 @@
 #}
 {% if items %}
 <div>
-	<ul class="ucb-person-department">
-		{% for item in items %}
-		<li itemprop="department">{{ item.content['#title'] }}</li>
-		{% endfor %}
-	</ul>
+    <ul class="ucb-person-department">
+        {% for item in items %}
+        <li itemprop="department">{{ item.content['#title']|upper }}</li>
+        {% endfor %}
+    </ul>
 </div>
 {% endif %}
