--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -126,7 +126,7 @@ a, a:visited, a:hover, a:active {
 .ucb-email-footer-simple a,
 .ucb-email-header-darkbox a,
 .ucb-email-footer-darkbox a {
-  color: var(--ucb-gold);
+  color: #cfb87b;
 }
 .ucb-email-header-classic :hover,
 .ucb-email-footer-classic a:hover,
@@ -134,7 +134,7 @@ a, a:visited, a:hover, a:active {
 .ucb-email-footer-simple a:hover,
 .ucb-email-header-darkbox a:hover,
 .ucb-email-footer-darkbox a:hover {
-  color: var(--ucb-white);
+  color: #fff;
 }
 
                 .tags > a{
