wip: header sizing

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -137,6 +137,12 @@ a, a:visited, a:hover, a:active {
   color: #fff;
 }
 
+#email h2{
+  font-size: 20px;
+}
+
+
+
                 .tags > a{
                     color: #656565 !important;
                     text-decoration: none;
