--- a/templates/block/block--expandable-content.html.twig
+++ b/templates/block/block--expandable-content.html.twig
@@ -22,7 +22,8 @@
 
 {% set accordianContent %}
 <div class="accordion accordion-flush" id="ucb-accordion{{ id }}">
-  {% for key, item in entity.field_expandable_content_copy %}{% set itemExpanded = loop.first and (layoutSelection != 0 or entity.field_expandable_content_open.value) %}
+  {% for key, item in entity.field_expandable_content_copy %}
+    {% set itemExpanded = loop.first and (layoutSelection != 0 or entity.field_expandable_content_open.value) %}
     <div class="accordion-item tab-content">
       <div class="accordion-header" id="ucb-accordion{{ id }}-title{{ loop.index }}">
         {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
@@ -57,21 +58,21 @@
 {% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
 
 {% block content %}
-	<div{{attributes.addClass(classes,blockStyles)}}>
-		{{ title_prefix }}
-		{% if label %}
-			<div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text {{ headingStyle }}">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-		{% endif %}
-		{{ title_suffix }}
+  <div{{attributes.addClass(classes,blockStyles)}}>
+    {{ title_prefix }}
+    {% if label %}
+      <div class="block-title-outer">
+        <{{headingTag}}{{title_attributes}} class="block-title">
+          <span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+            {{ content.field_bs_icon }}
+          </span>
+          <span class="block-title-text {{ headingStyle }}">
+            {{ label }}
+          </span>
+        </{{headingTag}}>
+      </div>
+    {% endif %}
+    {{ title_suffix }}
     {% if layoutSelection == 1 %}
       <div class="horizontal-tab-accordion">
         <ul class="nav nav-tabs justify-content-center" id="ucb-horizontal-tabs{{ id }}" role="tablist">
